Add support for the filter clause in window function calls.